--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -62,7 +62,7 @@ sel_b <- -sel_a
 
 Electric Load Forecasting is the process of predicting the future electricity demand within a specific geographical area over a certain period of time, typically ranging from hours to years. This forecasting involves analyzing historical electricity consumption data, considering various influencing factors such as weather patterns, economic indicators, population growth, and technological advancements, to project future electricity usage accurately.
 
-In this project, we tested different models and techniques for day-ahead forecasting of total net demand in France during France's sobriety period following winter 2022. The challenge of this project stemmed from the constraint of having access to data only up to August 2022 to train our models. No historical data could replicate the special circumstances of France's energy sobriety plan following September 2020, so we needed to apply non-stationary processes forecasting techniques, such as ARIMA.
+In this project, we tested different models and techniques for day-ahead ex-post forecasting of total net demand in France during France's sobriety period following winter 2022. The challenge of this project stemmed from the constraint of having access to data only up to August 2022 to train our models. No historical data could replicate the special circumstances of France's energy sobriety plan following September 2020, so we needed to apply non-stationary processes forecasting techniques, such as ARIMA.
 
 ## Preliminaries
 
@@ -75,14 +75,16 @@ $$
 It is easily shown that the solution $q^{*}$ of $$ 
 argmin_q(\mathbb{E}[l_{\alpha}(y-q)])
 $$ verifies $$
-F(q*) = \alpha
+F(q*) = \alpha 
 $$
 
-So in order to minimize the loss we need to effectively estimate the 0.95 quantile.
+Where $F$ is the cdf. So in order to minimize the loss we need to effectively estimate the 0.95 quantile of the test dataset.
 
 ## Summary
 
-After performing some basic but necessary transformations to our dataset, we began by focusing our efforts on testing different models, collecting additional data and performing some other, more advanced transformations to our dataset. Our first breakthrough in performance came when we started testing GAM models. From that point on we focused on finetuning this model, focusing on discovering the most significant covariate effects, adding carefully chosen quantiles to the fit model, and further improving the model by applying ARIMA correction.
+After performing some basic but necessary transformations to our dataset, we began by focusing our efforts on testing different models, collecting additional data and performing some other, more advanced transformations to our dataset. Our first breakthrough in performance came when we started testing GAM models. From that point on, we mainly finetuned this model. To do this, we focused on finding the most significant covariate effects, on adding carefully chosen quantiles to the fit model, and on further improving the model by applying ARIMA correction.
+
+One recurrent idea through our development process consisted on performing sliding window cross-validation to train our models. 
 
 ## Data gathering
 
@@ -90,7 +92,7 @@ The COVID period introduced once again a non stationary effect we had to account
 
 ## Feature engineering
 
-Before (Lo básico)
+We started by performing some basic but fundamental variable transformations: we coded into factor the `WeekDays` variable, and we also created a new numerical variable, `Time` that encodes `Date` into a numerical format. 
 
 A more advanced transformation that we carried out consisted of adjusting the nebulosity variable. We can observe that there is a clear regime shift between 2016 and 2017. This is because before 2017, it was human operators who were scoring the nebulosity level based on observations, and then, we switched to a system that determined the level automatically. We tried to transform the nebulosity data from the first regime to have the same mean and variance as the second regime, but eventually abandoned the idea. (include plots)
 
@@ -109,6 +111,9 @@ plot(Data0$Temp, Data0$Temp_res_windchill)
 ```
 
 However, since these formulas are nonlinear in temperature and wind speed; it is not sufficient to know the average temperature and weather speed to calculate the average perceived temperature. In addition, these formulas are not only quite subjective, but are mostly used to estimate wind chill temperatures in cold climates. There are more accurate formulas that take into account humidity, but we believe that collecting all the necessary data would be an arduous task, probably with little return on investment.
+
+## Time Cross-Validation
+
 
 ## Preliminary models
 
