--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -56,6 +56,9 @@ Data0$Temp_res_windchill <- (13.12 + 0.6215*(Data0$Temp - 273.15) - 11.37*(Data0
 sel_a <- which(Data0$Year <= 2021)
 sel_b <- -sel_a
 
+Data0$Nebulosity_transformed = Data0$Nebulosity_weighted
+Data0$Nebulosity_transformed[-sel_c] = Data0$Nebulosity_transformed[-sel_c] * sqrt(var(Data0$Nebulosity_transformed[sel_c]) / var(Data0$Nebulosity_transformed[-sel_c]))
+Data0$Nebulosity_transformed[-sel_c] = Data0$Nebulosity_transformed[-sel_c] + mean(Data0$Nebulosity_transformed[sel_c]) - mean(Data0$Nebulosity_transformed[-sel_c])
 ```
 
 ## Introduction
@@ -66,7 +69,7 @@ In this project, we tested different models and techniques for day-ahead ex-post
 
 ## Preliminaries
 
-This project was developed as part of a private Kaggle competition. One of the complexities of the competition lay in the choice of the evaluation metric by the organizer. The objective was to achieve the best score on a private dataset with respect to the pinball loss for quantile 0.95, described below.
+This project was developed as part of a private Kaggle competition. One of the complexities of the competition lay in the choice of the evaluation metric by the organizer; the objective was to achieve the best score on a private dataset with respect to the pinball loss for quantile 0.95, described below.
 
 $$
 l_{\alpha}(y-q) = \alpha |y-q|^{+} (1-\alpha )|y-q|^{-}\quad \text{where} \quad |x|^{+} = max(x,0),\quad |x|^{-} = max(-x,0)
@@ -94,7 +97,7 @@ The COVID period introduced once again a non stationary effect we had to account
 
 We started by performing some basic but fundamental variable transformations: we coded into factor the `WeekDays` variable, and we also created a new numerical variable, `Time` that encodes `Date` into a numerical format.
 
-A more advanced transformation that we carried out consisted of adjusting the nebulosity variable. We can observe that there is a clear regime shift between 2016 and 2017. This is because before 2017, it was human operators who were scoring the nebulosity level based on observations, and then, we switched to a system that determined the level automatically. We tried to transform the nebulosity data from the first regime to have the same mean and variance as the second regime, but eventually abandoned the idea. (include plots)
+A more advanced transformation that we carried out consisted of adjusting the nebulosity variable. We can observe that there is a clear regime shift between 2016 and 2017. This is because before 2017, it was human operators who were scoring the nebulosity level based on observations, and then, we switched to a system that determined the level automatically. We transformed the nebulosity data from the first regime to have the same mean and variance as the second regime. (include plots)
 
 In the context of energy consumption, a variable that can theoretically be even more significant than temperature is the perceived temperature. This is why we tried to construct this variable from our dataset. We had two candidate functions, the Siple formula and the standard wind chill formula from Environment Canada: \$\$ \begin{equation*}
   \begin{aligned}
@@ -114,7 +117,7 @@ However, since these formulas are nonlinear in temperature and wind speed; it is
 
 ## Time Cross-Validation
 
-We developped a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics.
+We developed a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics.
 
 ## Preliminary Models
 
@@ -126,27 +129,13 @@ Naturally, one of the first models we used was linear regression; using this cla
 
 ### Quantile Regression
 
-One approach to solving the second forementioned problem is to simply perform quantile regression intead of classic linear regression, but we found more success fitting other models and adjusting for the loss discrepancy by adding quantiles (explained in the Final Model section) to the fitted models, so we quickly abandoned this approach.
+One approach to solving the second forementioned problem is to simply perform quantile regression instead of classic linear regression, but we found more success fitting other models and adjusting for the loss discrepancy by adding quantiles (explained in the Final Model section) to the fitted models, so we quickly abandoned this approach.
 
-### GAM
+## GAM
 
-Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimations than the previous models we had tried. The GAM model alongside with the quantile correction were able to address the two problems we were facing: as we mentioned, quantile correction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. We describe in more detail how our GAM model evolved over time in the Final Model section.
+Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimations than the previous models we had tried. The GAM model alongside with the quantile correction were able to address the two problems we were facing: as we mentioned, quantile correction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. 
 
-### Random Forest
 
-One model that we briefly explored before the end of the competition was the Random Forest model.
-
-We had a few ideas in mind:
-
--   Fitting Random Forests on the residuals on our most performing model, to further improve performance.
-
--   Expert's aggregation using our finetuned GAM and a finetuned Random Forest.
-
-The first idea arose after analyzing the residuals of our model. If clear periodicities can be observed in the residuals, the performance of the model can probably be improved; since a sufficiently advanced model should leave white noise as a residual. We think that fitting a Random Forest model to the residuals could be a great idea, since our model is mainly focused on capturing bivariate effects between covariates, and a sufficiently deep tree model can capture more complex interactions.
-
-The second idea was to fit a model independent of our GAM, and then combine these models through expert aggregation. The Random Forest is a model conceptually very far from a GAM, a desirable property when aggregating different predictions through this technique.
-
-Unfortunately, we were unable to implement these ideas due to lack of time.
 
 ## Final Model
 
@@ -154,7 +143,15 @@ Unfortunately, we were unable to implement these ideas due to lack of time.
 
 ### Covariate Effect Analysis
 
-Much of our progress was based on finding interesting bivariate effects. Many of these effects were found by reasoning, some others were found by different exploratory techniques, and a few findings were serendipitous.
+Much of our progress was based on finding interesting bivariate effects. Many of these effects were found by reasoning, some others were found by different exploratory techniques, and a few findings were serendipitous. 
+
+For example, `toy` has an interesting nonlinear relationship with `Solar.power` that we found when thinking about the daytime length variations with seasons: more daytime implies more solar power. Also, during winter, the angle of incidence of the sunlight with respect to the surface is smaller, so the less total light is received for that reason. These effects can be appreciated in the plot:
+
+(plot)
+
+Some other relationships were found 
+
+
 
 
 
@@ -162,8 +159,24 @@ Much of our progress was based on finding interesting bivariate effects. Many of
 
 The second breakthrough + what is arima + ARIMA formal definition.
 
+ARIMA is an acronym for Auto Regressive Integrated Moving Average:
+
+
 ## Results and Discussion
 
-To summarize our findings, we discovered that (...) is important for forecasting and ARIMA is a great tool (...)
+Although we placed #1 in the competition, we know that our model is not perfect and has still a lot of room for improvement. We list here some ideas we had to further improve our predictions that we could not implement due to lack of time, that could be interesting to expand on our work in the future.
 
-Although we achieved (...) score, placing #1 in the competition, we know that our model is not perfect and has still a lot of room for improvement. We list some ideas we had to further improve our predictions that we h
+Regarding Feature Engineering, even though we didn't manage to construct a significant perceived temperature variable, we still believe it could have a positive effect in the models, and could be a step in the right direction if the right data is found online.
+
+Another interesting idea concerns the enconding of our different time variables, such as `WeekDays`, `Date` and `toy`. If one thinks about it, the encodings we used are in a certain way suboptimal: time variables have a cyclic nature that standard label encoding can fail to capture. For instance, `toy` represents with a value from 0 to 1 the moment of the year. So 0.4 and 0.5 roughly represent May and June, which is ideal because these months are next to each other, and their representations have also this property. On the other hand, January and December are very close to each other, but their representation is not. So a cyclical encoding of variables could prove a good approach.
+
+Concerning models, we mostly considered Random Forests, for which we had two main ideas in mind: 
+
+-   Fitting Random Forests on the residuals on our most performing model, to further improve performance.
+
+-   Expert's aggregation using our finetuned GAM and a finetuned Random Forest.
+
+The first idea arose after analyzing the residuals of our model. If clear periodicities can be observed in the residuals, the performance of the model can probably be improved; since a sufficiently advanced model should leave white noise as a residual. We think that fitting a Random Forest model to the residuals could be a great idea, since our model is mainly focused on capturing bivariate effects between covariates, and a sufficiently deep tree model can capture more complex interactions.
+
+The second idea was to fit a model independent of our GAM, and then combine these models through expert aggregation. The Random Forest is a model conceptually very different from a GAM, a desirable property when aggregating different predictions through this technique. Given the importance of online learning in our problem, we believe that more complex expert aggregations involving several models could have great performance. The next steps in this direction would consist on the exploration of diverse regression models, such as XGboost, KNN regressions, etc.
+
