--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -13,10 +13,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r path}
-setwd("C:/Users/PabloHueso/Documents/GitHub/Net-Load-Forecasting")
-```
-
 ```{r import library, include = FALSE}
 rm(list=objects())
 graphics.off()
@@ -56,6 +52,12 @@ Data0$Temp_res_windchill <- (13.12 + 0.6215*(Data0$Temp - 273.15) - 11.37*(Data0
 sel_a <- which(Data0$Year <= 2021)
 sel_b <- -sel_a
 
+sel_c <- which(Data0$Year >= 2018)
+
+Data0$Nebulosity_transformed = Data0$Nebulosity_weighted
+Data0$Nebulosity_transformed[-sel_c] = Data0$Nebulosity_transformed[-sel_c] * sqrt(var(Data0$Nebulosity_transformed[sel_c]) / var(Data0$Nebulosity_transformed[-sel_c]))
+Data0$Nebulosity_transformed[-sel_c] = Data0$Nebulosity_transformed[-sel_c] + mean(Data0$Nebulosity_transformed[sel_c]) - mean(Data0$Nebulosity_transformed[-sel_c])
+
 ```
 
 ## Introduction
@@ -94,15 +96,15 @@ The COVID period introduced once again a non stationary effect we had to account
 
 We started by performing some basic but fundamental variable transformations: we coded into factor the `WeekDays` variable, and we also created a new numerical variable, `Time` that encodes `Date` into a numerical format.
 
-A more advanced transformation that we carried out consisted of adjusting the nebulosity variable. We can observe that there is a clear regime shift between 2016 and 2017. This is because before 2017, it was human operators who were scoring the nebulosity level based on observations, and then, we switched to a system that determined the level automatically. We tried to transform the nebulosity data from the first regime to have the same mean and variance as the second regime, but eventually abandoned the idea. (include plots)
+A more advanced transformation that we carried out consisted of adjusting the nebulosity variable. We can observe that there is a clear regime shift between 2016 and 2017. This is because before 2017, it was human operators who were scoring the nebulosity level based on observations, and then, we switched to a system that determined the level automatically. We tried to transform the nebulosity data from the first regime to have the same mean and variance as the second regime (cf. figure below), but eventually abandoned the idea.
 
-In the context of energy consumption, a variable that can theoretically be even more significant than temperature is the perceived temperature. This is why we tried to construct this variable from our dataset. We had two candidate functions, the Siple formula and the standard wind chill formula from Environment Canada: \$\$ \begin{equation*}
-  \begin{aligned}
-          T_{Siple}^{C^{\circ}}} &= 3 + (T\_{air}^{C^{\circ}}- 33)\*(0.474 + 0.454 \sqrt V^{Km/h}-0.0454V^{Km/h})\\ 
-          T_{WChill}^{C^{\circ}}} &= 13.2 + 0.6215T_{air}^{C^{\circ}} -  11.37V^{Km/h}+0.3965T\_{air}^{C^{\circ}}}V{Km/h}  \\
-           
-  \end{aligned}
-\end{equation*} \$\$
+![](images/nebulosity_weighted_vs_transformed.png)
+
+In the context of energy consumption, a variable that can theoretically be even more significant than temperature is the perceived temperature. This is why we tried to construct this variable from our dataset. We had two candidate functions, the Siple formula and the standard wind chill formula from Environment Canada:
+
+$$
+ \begin{equation*} \begin{aligned} T_{Simple}^{C^{\circ}} &= 3 + (T_{air}^{C^{\circ}} - 33) \cdot (0.474 + 0.454 \sqrt{V^{Km/h}} - 0.0454 V^{Km/h}) \\ T_{WindChill}^{C^{\circ}} &= 13.2 + 0.6215 T_{air}^{C^{\circ}} - 11.37 V^{Km/h} + 0.3965 T_{air}^{C^{\circ}} V^{Km/h} \end{aligned} \end{equation*}
+$$
 
 ```{r windchill}
 par(mfrow=c(1,2))
@@ -114,7 +116,7 @@ However, since these formulas are nonlinear in temperature and wind speed; it is
 
 ## Time Cross-Validation
 
-We developped a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics.
+We developped a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics. We also used this function along with corresponding pinball boxplots to calibrate our training window size.
 
 ## Preliminary Models
 
@@ -128,9 +130,45 @@ Naturally, one of the first models we used was linear regression; using this cla
 
 One approach to solving the second forementioned problem is to simply perform quantile regression intead of classic linear regression, but we found more success fitting other models and adjusting for the loss discrepancy by adding quantiles (explained in the Final Model section) to the fitted models, so we quickly abandoned this approach.
 
-### GAM
+## GAM
 
-Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimations than the previous models we had tried. The GAM model alongside with the quantile correction were able to address the two problems we were facing: as we mentioned, quantile correction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. We describe in more detail how our GAM model evolved over time in the Final Model section.
+Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimations than the previous models we had tried. The GAM model alongside with the quantile prediction were able to address the two problems we were facing: as we mentioned, quantile prediction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. We describe in more detail how our GAM model evolved over time in the Final Model section.
+
+```{r}
+eq <- Net_demand ~ s(as.numeric(Date),k=3, bs='cr') + s(toy,k=30, bs='cc') +
+  WeekDays + BH +
+  s(Net_demand.1, bs='cr') +  s(Net_demand.7, bs='cr') +
+  s(Load.1, bs='cr')+ s(Load.7, bs='cr') +
+  s(Temp,k=10, bs='cr') + s(Temp_s99,k=10, bs='cr') + 
+  s(Wind) + te(as.numeric(Date), Nebulosity, k=c(4,10))
+```
+
+![](images/gam0_boxplots.png)
+
+```{r}
+eq <- Net_demand ~ s(Time, k=3, bs='cr') + s(toy,k=30, bs='cc') +
+  WeekDays + BH_Holiday + Holiday + StringencyIndex_Average +
+  s(Load.1, by=WeekDays, bs='cr') + s(Load.7, bs='cr') +
+  s(Wind_power.1, k=5, bs="cr") + s(Solar_power.1, k=5, bs='cr') +
+  ti(Wind_weighted, k=7, bs='cr') + s(Nebulosity, by=Year, bs="cr") +
+  ti(Temp, k=7, bs='cr') + ti(Temp, Temp_s99_max, bs='cr') + 
+  ti(Wind_weighted, Temp, k=c(3,7), bs="cr")
+```
+
+![](images/gam1_boxplots.png)
+
+```{r}
+eq <- Net_demand ~ s(Time, k=3, bs='cr') + s(toy,k=30, bs='cc') +
+  WeekDays * BH_before  + BH_Holiday + Holiday + 
+  StringencyIndex_Average * EconomicSupportIndex +
+  s(Load.1, by=WeekDays, bs='cr') + s(Load.7, bs='cr') +
+  s(Wind_power.1, k=5, bs="cr") + s(Solar_power.1, k=5, bs='cr') +
+  ti(Wind_weighted, k=10, bs='cr') + s(Nebulosity, by=Year, bs="cr") +
+  ti(Temp, k=7, bs='cr') + ti(Temp, Temp_s99_max, bs='cr') + 
+  ti(Wind_weighted, Temp, k=c(3,7), bs="cr")
+```
+
+![](images/gam2_boxplots.png)
 
 ### Random Forest
 
@@ -150,13 +188,13 @@ Unfortunately, we were unable to implement these ideas due to lack of time.
 
 ## Final Model
 
-### Quantile correction
+### Quantile prediction
+
+For quantile prediction in the same manner that
 
 ### Covariate Effect Analysis
 
 Much of our progress was based on finding interesting bivariate effects. Many of these effects were found by reasoning, some others were found by different exploratory techniques, and a few findings were serendipitous.
-
-
 
 ### ARIMA
 
