--- a/rapport.Rmd
+++ b/rapport.Rmd
@@ -111,11 +111,11 @@ plot(Data0$Temp, Data0$Temp_res_siple)
 plot(Data0$Temp, Data0$Temp_res_windchill)
 ```
 
-However, since these formulas are nonlinear in temperature and wind speed; it is not sufficient to know the average temperature and weather speed to calculate the average perceived temperature. In addition, these formulas are not only quite subjective, but are mostly used to estimate wind chill temperatures in cold climates. There are more accurate formulas that take into account humidity, but we believe that collecting all the necessary data would be an arduous task, probably with little return on investment.
+We can see that the relationship between our new formulas `Temp` is quite linear. These formulas proved ineffective in improving the significance of the original `Temp` variable. However, it has to be noted that since these formulas are nonlinear in temperature and wind speed; it is not sufficient to know the average temperature and weather speed to correctly calculate the average perceived temperature. In addition, these formulas are not only quite subjective, but are mostly used to estimate wind chill temperatures in cold climates. There are more accurate formulas that take into account humidity, but we believe that collecting all the necessary data would be an arduous task, probably with little return on investment.
 
 ## Time Cross-Validation
 
-We developped a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics. We also used this function along with corresponding pinball boxplots to calibrate our training window size.
+We developed a time-series cross validation function that better recreates the forecasting scenario, in which training data has temporal precedence over test data. In addition, for practical considerations, the function returns predictions, residuals, RMSE and pinball loss scores as well as means and quantiles of the residuals on the different predictions over the testsets. It should be pointed out that we used a hybrid between the rolling and sliding window methods: the test sets were contiguous and did not overlap. We made extensive use of this function to evaluate the performance of the many models we compared, as it allowed us to have a quick but comprehensive overview of model performance with boxplots of various residual statistics. We also used this function along with corresponding pinball boxplots to calibrate our training window size.
 
 ## Preliminary Models
 
@@ -131,7 +131,7 @@ One approach to solving the second forementioned problem is to simply perform qu
 
 ## GAM
 
-Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimations than the previous models we had tried. The GAM model alongside with the quantile correction were able to address the two problems we were facing: as we mentioned, quantile correction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. 
+Not long after we started fitting models, we realized GAMs were going to perform better and provide better estimates than the previous models we had tried. The GAM model alongside with the quantile correction were able to address the two problems we were facing: as we mentioned, quantile correction proved to be a great tool to adjust for the 0.95 quantile, and the nature of GAMs made it easy for us to include nonlinear effects in the model. We present here part of the evolution of our models over time, comparing our models with a base GAM model. We note that base GAM model performance is slightly overestimated, as for this model the quantiles were estimated in a different, less robust way.
 
 ```{r}
 eq <- Net_demand ~ s(as.numeric(Date),k=3, bs='cr') + s(toy,k=30, bs='cc') +
@@ -141,6 +141,8 @@ eq <- Net_demand ~ s(as.numeric(Date),k=3, bs='cr') + s(toy,k=30, bs='cc') +
   s(Temp,k=10, bs='cr') + s(Temp_s99,k=10, bs='cr') + 
   s(Wind) + te(as.numeric(Date), Nebulosity, k=c(4,10))
 ```
+
+Base model
 
 ![](images/gam0_boxplots.png)
 
@@ -156,6 +158,8 @@ eq <- Net_demand ~ s(Time, k=3, bs='cr') + s(toy,k=30, bs='cc') +
 
 ![](images/gam1_boxplots.png)
 
+We achieved big improvements with the COVID variables, and separating univariate and bivariate effects via the usage of the `ti` function in the GAM equation proved a great way to cherry-pick the most significant effects.
+
 ```{r}
 eq <- Net_demand ~ s(Time, k=3, bs='cr') + s(toy,k=30, bs='cc') +
   WeekDays * BH_before  + BH_Holiday + Holiday + 
@@ -169,7 +173,15 @@ eq <- Net_demand ~ s(Time, k=3, bs='cr') + s(toy,k=30, bs='cc') +
 
 ![](images/gam2_boxplots.png)
 
+The addition of the bivariate effect `WeekDays * BH_before` proved to be extremely effective, as it increased performance and reduced variance.
+
 ## Final Model
+
+We describe in this section the techniques followed to craft our most performing equation, how we found the important bivariate effects and the adjustments made to the model.
+
+### ARIMA
+
+The second big breakthrough in performance came when we started using ARIMA
 
 ### Quantile prediction
 
@@ -177,22 +189,17 @@ For quantile prediction in the same manner that
 
 ### Covariate Effect Analysis
 
-Much of our progress was based on finding interesting bivariate effects. Many of these effects were found by reasoning, some others were found by different exploratory techniques, and a few findings were serendipitous. 
+Much of our progress was based on finding interesting bivariate effects. Many of these effects were found by reasoning, some others were found by different exploratory techniques, and a few findings were serendipitous.
 
 For example, `toy` has an interesting nonlinear relationship with `Solar.power` that we found when thinking about the daytime length variations with seasons: more daytime implies more solar power. Also, during winter, the angle of incidence of the sunlight with respect to the surface is smaller, so the less total light is received for that reason. These effects can be appreciated in the plot:
 
 (plot)
 
-Some other relationships were found 
+Some other relationships were found by exploratory analysis techniques:
 
+We fit random forests with trees of varying maximal depths in order to find bivariate effects and to investigate the existence of further multivariate effects.
 
-
-### ARIMA
-
-The second breakthrough + what is arima + ARIMA formal definition.
-
-ARIMA is an acronym for Auto Regressive Integrated Moving Average:
-
+We also tested for the most promising effects, and ended up retaining only some of them based on summary analysis and actual contributed performance to the model, which we estimated via boxplot analysis.
 
 ## Results and Discussion
 
@@ -200,9 +207,7 @@ Although we placed #1 in the competition, we know that our model is not perfect 
 
 Regarding Feature Engineering, even though we didn't manage to construct a significant perceived temperature variable, we still believe it could have a positive effect in the models, and could be a step in the right direction if the right data is found online.
 
-Another interesting idea concerns the enconding of our different time variables, such as `WeekDays`, `Date` and `toy`. If one thinks about it, the encodings we used are in a certain way suboptimal: time variables have a cyclic nature that standard label encoding can fail to capture. For instance, `toy` represents with a value from 0 to 1 the moment of the year. So 0.4 and 0.5 roughly represent May and June, which is ideal because these months are next to each other, and their representations have also this property. On the other hand, January and December are very close to each other, but their representation is not. So a cyclical encoding of variables could prove a good approach.
-
-Concerning models, we mostly considered Random Forests, for which we had two main ideas in mind: 
+Concerning models, we mostly considered Random Forests, for which we had two main ideas in mind:
 
 -   Fitting Random Forests on the residuals on our most performing model, to further improve performance.
 
